2002-06-24  Jody Goldberg <jody@gnome.org>

	* src/func-builtin.c : finish cleaning out the 'selection' function
	and silence the warnings.

2002-06-23  Jody Goldberg <jody@gnome.org>

	* src/sheet-control-gui-priv.h (SCG_FOREACH_PANE) : respect the
	  GnumericPane::is_active flag to begin support for h/v only freezing.
	* src/sheet-control-gui.c (scg_redraw_headers) : ditto.
	(scg_make_cell_visible) : ditto.

	* src/sheet-view.c (sv_attach_control) : position the cursors for the
	  newly attached control.

	* src/func-builtin.c (func_builtin_init) : delete the 'selection'
	  function.  It is no longer possible with a sheetview.

	* src/workbook-control-gui.c (cb_select_auto_expr) : remove
	  'selection(0)' argument and just pass function name.  The conversion
	  to SheetView forces a different methodology.
	* src/workbook-view.c (workbook_view_new) : ditto.
	(wb_view_auto_expr_recalc) : Make the call manually.

2002-06-22  Jody Goldberg <jody@gnome.org>

	* src/expr.h : support constructed ranges.
	* src/parser.y (parser_sheet_by_name) : ditto.
	* src/expr-name.c (name_refer_circular) : ditto.

	* src/expr.c (do_gnm_expr_unref) : support range_ctor and reorder to
	  produce a better jump table.
	(gnm_expr_equal) : ditto.
	(do_expr_as_string) : ditto.
	(gnm_expr_rewrite) : ditto.
	(ets_hash) : ditto.
	(ets_equal) : ditto.
	(expr_tree_sharer_share) : ditto.
	(expr_eval_real) : ditto and use gnm_expr_extract_ref.
	(gnm_expr_extract_ref) : new.

2002-06-21  Jody Goldberg <jody@gnome.org>

	* src/workbook-view.c (workbook_view_new) : add views of all existing
	  sheets.

	* src/workbook-control-component.c (wbcc_sheet_focus) : move to new
	signature.

	* src/application.c (gnumeric_application_finalize) : do not free the
	  clipboard here.  It is too late.

2002-06-21  Jody Goldberg <jody@gnome.org>

	* src/parse-util.c (parse_cell_name) : take a cellpos *

	* src/func-builtin.c (gnumeric_selection) : dummy out for now until a
	  different approach is available.
